--- a/src/qsynth.qrc
+++ b/src/qsynth.qrc
@@ -1,32 +1,33 @@
-<RCC version="1.0">
- <qresource>
-  <file>images/qsynth.png</file>
-  <file>images/qsynth.svg</file>
-  <file>images/about1.png</file>
-  <file>images/accept1.png</file>
-  <file>images/add1.png</file>
-  <file>images/channels1.png</file>
-  <file>images/down1.png</file>
-  <file>images/edit1.png</file>
-  <file>images/ledoff1.png</file>
-  <file>images/ledon1.png</file>
-  <file>images/messages1.png</file>
-  <file>images/open1.png</file>
-  <file>images/options1.png</file>
-  <file>images/panic1.png</file>
-  <file>images/preset1.png</file>
-  <file>images/quit1.png</file>
-  <file>images/remove1.png</file>
-  <file>images/reset1.png</file>
-  <file>images/restart1.png</file>
-  <file>images/save1.png</file>
-  <file>images/setup1.png</file>
-  <file>images/sfont1.png</file>
-  <file>images/up1.png</file>
-  <file>images/formOpen.png</file>
-  <file>images/formRemove.png</file>
-  <file>images/formSave.png</file>
-  <file>images/itemReset.png</file>
-  <file>images/qtlogo1.png</file>
- </qresource>
+<RCC>
+    <qresource prefix="/">
+        <file>images/qsynth.png</file>
+        <file>images/qsynth.svg</file>
+        <file>images/about1.png</file>
+        <file>images/accept1.png</file>
+        <file>images/add1.png</file>
+        <file>images/channels1.png</file>
+        <file>images/down1.png</file>
+        <file>images/edit1.png</file>
+        <file>images/ledoff1.png</file>
+        <file>images/ledon1.png</file>
+        <file>images/messages1.png</file>
+        <file>images/open1.png</file>
+        <file>images/options1.png</file>
+        <file>images/panic1.png</file>
+        <file>images/preset1.png</file>
+        <file>images/quit1.png</file>
+        <file>images/remove1.png</file>
+        <file>images/reset1.png</file>
+        <file>images/restart1.png</file>
+        <file>images/save1.png</file>
+        <file>images/setup1.png</file>
+        <file>images/sfont1.png</file>
+        <file>images/up1.png</file>
+        <file>images/formOpen.png</file>
+        <file>images/formRemove.png</file>
+        <file>images/formSave.png</file>
+        <file>images/itemReset.png</file>
+        <file>images/qtlogo1.png</file>
+        <file>images/shell.png</file>
+    </qresource>
 </RCC>
